[package]
name = "wg2gue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1.0.72"
argh = "0.1.10"
tokio = { version = "1.29.1", features = ["rt", "net", "sync", "macros", "io-util", "time"] }
tracing = "0.1.37"
tracing-subscriber = {version="0.3.17", optional=true}
base64 = "0.21.2"
boringtun = "0.6.0"


[features]
default = ["tracing-subscriber", "tracing/release_max_level_debug"]
