[package]
name = "wg2gue"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/vi/wg2gue"
license = "MIT/Apache-2.0"
description = "Command-line application that listens two UDP ports: one for Wireguard and the other for plain IP packets and exchanges them"
categories = ["network-programming", "command-line-utilities"]
keywords = ["udp", "wireguard", "boringtun", "gue", "fou"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1.0.72"
argh = "0.1.10"
tokio = { version = "1.29.1", features = ["rt", "net", "sync", "macros", "io-util", "time"] }
tracing = "0.1.37"
tracing-subscriber = {version="0.3.17", optional=true}
base64 = "0.21.2"
boringtun = "0.6.0"


[features]
default = ["tracing-subscriber", "tracing/release_max_level_debug"]
